CHANGES IN FLTK 1.1.0

	- The MingW and OS/2 makeinclude files didn't have the
	  new fltk_images library definitions.
	- Fl_Text_Editor didn't scroll the text in the widget
	  when dragging text.
	- Config header file changes for Borland C++.
	- FLTK didn't provide a Fl::remove_handler() method.


CHANGES IN FLTK 1.1.0rc4

	- Added new filter_value() methods to Fl_File_Chooser to
	  get and set the current file filters.
	- Added support for custom filters to Fl_File_Chooser.
	- Added Borland C++ Builder IDE project files from
	  Alexey Parshin.
	- Resource leak fixes under WIN32 from Ori Berger.
	- Now register a WIN32 message for thread messages.
	- Fl_Window didn't initialize the min and max window
	  size fields.
	- The JPEG and PNG image classes have been moved to the
	  fltk_images library, a la FLTK 2.0.  You can register
	  all image file formats provided in fltk_images using
	  the new fl_register_images() function.
	- Fl_XBM_Image didn't correctly load XBM files.
	- MacOS: Added Greg Ercolano's file descriptor support.
	- MacOS: Fixed text width bug.
	- A change in fl_fix_focus() broken click-focus in FLWM.
	- Cygwin with -mnocygwin didn't like the FL/math.h
	  header file.
	- Fl_Browser_ cleared the click count unnecessarily.
	- MacOS: Pixmap draw fix, gl_font implemented
	  FL_FOCUS fix, window type fix for modal and nonmodal
	  windows, glut uninitialised 'display' proc fix
	- Now support FLTK_1_0_COMPAT symbol to define
	  compatibility macros for the old FLTK 1.0.x function
	  names to the 1.1.x names.
	- Now translate the window coordinates when a window is
	  shown, moved, or resized.  This should fix the "menus
	  showing up at the wrong position" bug under XFree86.
	- Fixed some more problems with the Fl_BMP_Image file
	  loader.
	- BC++ fixes.
	- The pixmap_browser demo didn't check for a NULL image
	  pointer.
	- Fl_File_Icon::find() now uses fl_filename_isdir()
	  under WIN32 to check for directories.