@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.1.0
 
+	- Fl_Choice::value(n) didn't range check "n".
 	- The MingW and OS/2 makeinclude files didn't have the
 	  new fltk_images library definitions.
 	- Fl_Text_Editor didn't scroll the text in the widget
